--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PlaylistApp</title>
+    <title>Playlist</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -10,7 +10,7 @@
 
   <body>
     <p>
-      <%= link_to 'Sign Up', new_user_path %>
+      <%= link_to 'Join', new_user_path %>
     </p>
     <%= yield %>
   </body>
